--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://github.com/Rajkiran-125/Banking-system-" target="_blank"><i class="fa-brands fa-github"></i></a>
+                      <a href="https://rajkiran-125.github.io/Portfolio-/" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                   </div>
                 </div>
