--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="resume.pdf">Resume</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -166,6 +169,8 @@
                     <b>If you like my website. <br>
                       Don't hesitate to reach out!</b>
                   </p>
+                  <br>
+                  <a class="button button-a button-big button-rouded" href="resume.pdf" download>Download Resume</a>
                 </div>
               </div>
             </div>
