resume target=_black

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a class="nav-link js-scroll" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="resume.pdf">Resume</a>
+            <a class="nav-link js-scroll" href="resume.pdf" target="_blank">Resume</a>
           </li>
         </ul>
       </div>
