--- a/index.html
+++ b/index.html
@@ -395,6 +395,30 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
+            <a href="img/Republic day.png" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="img/Republic day.png" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Repblic Day</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">github</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="https://github.com/Rajkiran-125/26-january-Purna-Swaraj-Project" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
             <a href="img/partyclub.png" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="img/partyclub.png" alt="" class="img-fluid">
@@ -410,30 +434,6 @@
                   <div class="col-sm-4">
                     <div class="w-like">
                       <a href="https://github.com/Rajkiran-125/top-10-party-club-in-india/tree/main/top%2010%20party%20club%20project" target="_blank"><i class="fa-brands fa-github"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="img/coming soon.png" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="img/coming soon.png" alt="" class="img-fluid">
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">Coming Soon</h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">github</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
                     </div>
                   </div>
                 </div>
